# workflow-cookbook

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  BLUEPRINT.md  CHANGELOG.md  CHECKLISTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  GUARDRAILS.md  HUB.codex.md  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md  RUNBOOK.md  SECURITY.md  TASK.codex.md  TECH_DEBT_REGISTER.md  ctg.config.yaml  pyproject.toml  requirements.txt
.ctg/: policy.yaml  suppressions.yaml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  cross-repo-integration.yml  docs-resolve-pr-gate.yml  governance-gate.yml  labels-sync.yml  links.yml  markdown.yml  policy.yml  release-drafter.yml  release-evidence.yml  required-labels.yml  security-ci.yml  security.yml  spec-notify.yml  spec-tasker.yml  test.yml  tests.yml
docs/: AUTOSAVE-DESIGN-IMPL.md  BIRDSEYE.md  CONTRACTS.md  FORK_NOTES.md  IMPLEMENTATION-PLAN.md  INCIDENT_TEMPLATE.md  MERGE-DESIGN-IMPL.md  NAVIGATION.md  POLICY.md  ROADMAP_AND_SPECS.md  Release_Checklist.md  TASKS.md  Test_Review_Checklist.md  UPSTREAM.md  UPSTREAM_WEEKLY_LOG.md  adoption-guide.md  adoption-tiers.md  ci-config.md  ci_phased_rollout_requirements.md  completion-record.md  design.md  design.template.md  interfaces.md  requirements.md  requirements.template.md  spec.md  spec.template.md
docs/ADR/: INDEX.md  README.md
docs/acceptance/: AC-20260410-01.md  AC-20260410-02.md  AC-20260411-01.md  AC-20260411-02.md  AC-20260411-03.md  AC-20260411-04.md  AC-20260411-05.md  AC-20260411-06.md  AC-20260411-07.md  AC-20260411-08.md  AC-20260415-01.md  AC-20260417-01.md  AC-20260417-02.md  AC-20260417-03.md  AC-20260417-04.md  AC-20260417-05.md  AC-20260502-01.md  AC-20260502-02.md  AC-20260503-01.md  AC-20260503-02.md  AC-20260503-03.md  AC-20260503-04.md  AC-20260503-05.md  AC-20260503-06.md  AC-20260503-07.md  AC-20260503-08.md  AC-20260503-09.md  AC-20260701-01.md  AC-20260702-01.md  AC-20260711-01.md  AC-20260712-01.md  AC-20260712-02.md  AC-20260712-03.md  AC-20260712-04.md  AC-20260712-05.md  AC-20260714-01.md  ACCEPTANCE_TEMPLATE.md  INDEX.md  README.md
docs/addenda/: G_Security_Privacy.md  INDEX.md  I_Test_Cases.md  J_Test_Engineering.md  N_Improvement_Backlog.md  O_Adaptive_Improvement_Loop.md  P_Expansion_Candidates.md  Q_Remaining_Gap_Checklist.md  R_Product_Readiness_Checklist.md
docs/birdseye/: README.md  hot.json  index.json
docs/releases/: INDEX.md  RA-20260421-01.md  RB-20260419-01-sample-drill.md  RB-20260421-01-monthly-drill.md  RELEASE_APPROVAL_TEMPLATE.md  ROLLBACK_DRILL_OPERATIONS.md  v0.1.0.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.2.0.md
docs/reports/: docs-review-audit-20260711.md  enterprise-readiness-assessment-20260417.md
docs/security/: Branch_Protection_Operation.md  Dependency_Governance.md  Dependency_Tree.md  Enterprise_Readiness_Checklist.md  Ruleset_Migration_Analysis.md  SAC.md  Security_API_Inventory.md  Security_Exception_Registry.md  Security_Review_Checklist.md  dependency_exceptions.md
docs/tasks/: task-acceptance-normalization-ac-20260411-01.md  task-autosave-project-locks.md  task-birdseye-freshness-tightening.md  task-birdseye-threshold-migration.md  task-branch-protection-enablement-20260417.md  task-ci-gate-matrix-alignment-20260417.md  task-ci-rg006-sample-configs.md  task-code-to-gate-codemap-session-refactor-20260712.md  task-code-to-gate-context-pack-refactor-20260712.md  task-codemap-discovery-stability-20260714.md  (+25 more)
examples/: agent_protocol_evidence_consumer.sample.py  five-tool-chain-manifest.sample.json  five-tool-run-manifest.sample.json  inference_plugins.agent_protocol.sample.json  periodic-nudge.sample.json  plugin-capability-catalog.sample.json  qa-metrics.sample.json  recall-response.sample.json  reflection-summary.sample.json  self-improvement-v1.shipyard-export.sample.json  skill-draft-record.sample.json  tool-request.sample.json  user-model-snapshot.sample.json  workflow_plugins.cross_repo.sample.json  workspace-model-snapshot.sample.json
governance/: metrics_thresholds.yaml  policy.yaml  repo-responsibilities.yaml  self-improvement-gates.yaml
schemas/: five-tool-run-manifest.schema.json  inference-plugin-config.schema.json  periodic-nudge.schema.json  plugin-capability-catalog.schema.json  recall-response.schema.json  reflection-summary.schema.json  skill-draft-record.schema.json  user-model-snapshot.schema.json  workflow-plugin-config.schema.json  workspace-model-snapshot.schema.json
security_headers/: middleware.py
templates/: BLUEPRINT.md.template  EVALUATION.md.template  GUARDRAILS.md.template  HUB.codex.md.template  RUNBOOK.md.template
tests/: test_agent_protocol_evidence.py  test_check_acceptance.py  test_check_adoption_tier.py  test_check_agent_tools_hub_boundary.py  test_check_birdseye_freshness.py  test_check_branch_protection.py  test_check_ci_gate_matrix.py  test_check_ci_phase_doctor.py  test_check_completion_trace.py  test_check_docs_review_due.py  test_check_downstream_onboarding.py  test_check_front_matter.py  test_check_governance_gate.py  test_check_metrics_thresholds.py  test_check_plugin_capability_catalog.py  test_check_release_evidence.py  test_check_runbook_slimming.py  test_check_sample_docs_sync.py  test_check_security_docs_freshness.py  test_check_security_posture.py  test_check_stale_self_improvement.py  test_check_task_acceptance_bidirectional.py  test_check_task_acceptance_sync.py  test_check_task_completion_propagation.py  test_check_version_consistency.py  test_ci_workflow_contract.py  test_cli_distribution.py  test_cli_entrypoints.py  test_codemap_update.py  test_collect_metrics_cli.py  test_context_pack.py  test_context_trimmer.py  test_export_task_state.py  test_extract_upstream_changes.py  test_five_tool_manifest.py  test_gate_effectiveness.py  test_generate_acceptance_index.py  test_generate_acceptance_index_standalone.py  test_generate_docs_index.py  test_generate_evidence_report.py  (+20 more)
tools/: merge.py  provider_spi.py
(+169 files in other folders)
