# SPDX-License-Identifier: MIT
# Copyright 2025 RNA4219

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-cookbook"
version = "1.2.0"
description = "Workflow automation toolkit for governance and CI operations"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RNA4219"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - minimal runtime requirements
dependencies = [
    "pyyaml>=6.0",  # Optional but recommended for YAML configuration files
]

[project.urls]
Repository = "https://github.com/RNA4219/workflow-cookbook"
Issues = "https://github.com/RNA4219/workflow-cookbook/issues"
Changelog = "https://github.com/RNA4219/workflow-cookbook/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RNA4219/workflow-cookbook#readme"

[project.optional-dependencies]
# Development dependencies for testing and linting - pinned for reproducibility
# Update versions via Dependabot PRs after vulnerability review
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "coverage==7.15.2",
    "bandit==1.9.4",
    "pip-audit==2.10.1",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "build==1.5.1",
    "jsonschema==4.26.0",
]

[project.scripts]
# Stable CLI entrypoints (thin wrappers around existing modules)
wfc-governance-gate = "tools.ci.governance_gate.cli:main"
wfc-collect-metrics = "tools.perf.collect_metrics.cli:main"
wfc-codemap-update = "tools.codemap.update.cli:main"
wfc-context-pack = "tools.context.pack.cli:main"
wfc-five-tool-manifest = "tools.ci.five_tool_manifest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "security_headers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"tools/ci/*.py" = ["E402"]
"tools/context/workflow_docs.py" = ["E402"]
"tools/workflow_plugins/validate_workflow_plugin_config.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["tools", "security_headers"]


[tool.coverage.run]
patch = ["subprocess"]
parallel = true

[tool.coverage.paths]
source = [
    ".",
    "*/site-packages/workflow-cookbook",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
exclude = ["tests"]



[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert used (legitimate in tests)
# B105-B108: hardcoded password patterns (not applicable to this project)
# B404: subprocess module (used for git operations, validated)
# B603: subprocess without shell=True (used safely)
# B607 is enforced per call; reviewed git invocations use local nosec comments.
skips = ["B101", "B105", "B106", "B107", "B108", "B404", "B603"]
